# polysub

./: .gitignore  Cargo.toml  LICENSE  README.md  benchmark.py
.github/workflows/: test.yml
benchmarks/: b01_sp-ar-rc_16bit_steps  b02_sp-ar-rc_32bit_steps  b03_sp-ar-rc_64bit_steps  b06_sp-wt-lf_16bit_steps  b07_sp-wt-lf_32bit_steps  b08_sp-wt-lf_64bit_steps  b11_sp-ar-ks_8bit_steps  benchmark_explanation.txt
examples/: bench.rs  diff.rs
src/: benchmark.rs  coef.rs  db.rs  lib.rs  parser.rs  phase.rs  poly.rs  varmap.rs
tests/: benchmarks.rs
